TUP-5270 fix: Studio is stuck when two users make talend.project conflict https://jira.talendforge.org/browse/TUP-5270 https://jira.talendforge.org/browse/TPS-1743
1. fix the block issue

--- a/main/plugins/org.talend.repository.view/src/messages.properties
+++ b/main/plugins/org.talend.repository.view/src/messages.properties
@@ -17,3 +17,4 @@ RepositoryFilterSettingDialog.Login=Login
 RepositoryFilterSettingDialog.PatternInfo=The patterns are separated by comma, where\n* = any string, ? = any character, ,, = ,
 RepoViewCommonNavigator.Content=locked by {0} on {1}
 RepoViewCommonNavigator.Desc=\ \ Description: 
+RepoViewCommonNavigator.refresh=Refreshing... 
