--- a/main/plugins/org.talend.rcp/src/main/java/messages.properties
+++ b/main/plugins/org.talend.rcp/src/main/java/messages.properties
@@ -108,7 +108,7 @@ WelcomePageDynamicContentProvider.GettingStartedImportDemoBrief=Import project d
 DynamicContentProvider.analysis=no previously opened analysis
 DynamicContentProvider.businessModels=no previously opened business models
 DynamicContentProvider.TalendNewsTitle=Talend news
-DynamicContentProvider.TalendIntegrationCloud=Talend Integration Cloud
+DynamicContentProvider.TalendIntegrationCloud=Uplevel to cloud
 DynamicContentProvider.tryCloud=Try Talend Cloud FREE for 30 days
 DynamicContentProvider.isDisplayTitle=Do not display again
 DynamicContentProvider.jobs=no previously opened jobs
