--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_fr.properties
@@ -269,7 +269,7 @@ FileStep2.splitwayRecordForJavaFID=Découper la ligne avant le champ
 FileStep2.splitwayRecordForJavaFIDTip=Utile lorsque le séparateur de champs fait partie du séparateur de lignes.
 FileStep2.stop=Arrêter
 FileStep2.textEnclosure=Entourage du texte
-FileStep2.textEnclosureAlert=Le délimiteur de texte doit être spécifié
+FileStep2.textEnclosureAlert=Le séparateur de texte doit être spécifié
 FileStep2.textEnclosureTip=Entourage du texte
 FileStep2.wait=Wait
 FileStep2Form.onlyNumber=Seuls les nombres sont autorisés.
