--- a/i18n/plugins/org.talend.model.edit.nl/plugin_fr.properties
+++ b/i18n/plugins/org.talend.model.edit.nl/plugin_fr.properties
@@ -1020,7 +1020,7 @@ _UI_ValidationRules_Test_feature=Test
 _UI_TdExpression_version_feature=Version
 _UI_TdExpression_modificationDate_feature=Date de modification
 _UI_MdmConceptType_INPUT_literal=Lecture
-_UI_MdmConceptType_OUTPUT_literal=Ecriture
+_UI_MdmConceptType_OUTPUT_literal=Écriture
 _UI_MdmConceptType_RECEIVE_literal=RECEIVE
 _UI_ValidationRulesConnectionItem_type=Elément de connexion Règles de validation
 _UI_BRMSConnectionItem_type=Elément de connexion BRMS
