--- a/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_ja.properties
@@ -199,3 +199,5 @@ ItemReferenceDialog.forceDelete.button=\u524A\u9664\u306E\u5F37\u5236
 ItemReferenceDialog.forceDelete.warn.title=\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
 ItemReferenceDialog.forceDelete.warn.message=\u524A\u9664\u306E\u5F37\u5236\u30A2\u30AF\u30B7\u30E7\u30F3\u3092\u5B9F\u884C\u3059\u308B\u3068\u3001\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u4F7F\u7528\u3057\u3066\u3044\u308B\u30A2\u30A4\u30C6\u30E0\u304C\u58CA\u308C\u308B\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002\u524A\u9664\u3092\u5F37\u5236\u3057\u307E\u3059\u304B?
 ProjectRepositoryNode.sapContentExtractor=SAP BI\u30B3\u30F3\u30C6\u30F3\u30C4\u62BD\u51FA
+ProjectRepositoryNode.calculationViewSchemas=\u8A08\u7B97\u30D3\u30E5\u30FC\u30B9\u30AD\u30FC\u30DE
+ProjectRepositoryNode.sapBWAdvancedDataStoreObject=SAP ADSO
