--- a/i18n/plugins/org.talend.registration.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.registration.nl/src/main/java/messages_ja.properties
@@ -96,3 +96,10 @@ TalendForgeDialog.form.password.hint=\u30D1\u30B9\u30EF\u30FC\u30C9
 TalendForgeDialog.form.passwordAgain.hint=\u30D1\u30B9\u30EF\u30FC\u30C9\u518D\u5165\u529B
 TalendForgeDialog.form.email.hint=\u30E1\u30FC\u30EB
 RegisterManagement.userNameOrEmailInDatabase=\u30E6\u30FC\u30B6\u30FC\u540D\u53C8\u306Fe-mail\u30A2\u30C9\u30EC\u30B9\u304CDB\u5185\u3067\u91CD\u8907\u3057\u3066\u3044\u307E\u3059\u3002
+TalendForgeDialog.newProjectTitle1=Talend\u30B3\u30DF\u30E5\u30CB\u30C6\u30A3\u306B\u63A5\u7D9A
+TalendForgeDialog.labelTitle.Version_1=Studio\u3092Talend\u30B3\u30DF\u30E5\u30CB\u30C6\u30A3\u306B\u63A5\u7D9A\u3057\u307E\u3059\u3002
+TalendForgeDialog.labelMessageOnePart_1=Studio\u306B\u9069\u5207\u306A\u30B3\u30CD\u30AF\u30BF\u30FC\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u304B?exchange.talend.com\u306B\u30B3\u30DF\u30E5\u30CB\u30C6\u30A3\u63D0\u4F9B\u306E\u30B3\u30CD\u30AF\u30BF\u30FC\u304C\u306A\u3044\u304B\u3001Talend Exchange\u3092\u78BA\u8A8D\u3057\u307E\u3059
+TalendForgeDialog.labelMessageTwo_1=help.talend.com\u306ETalend\u30D8\u30EB\u30D7\u3067\u3001\u6700\u65B0\u306E\u88FD\u54C1\u30C9\u30AD\u30E5\u30E1\u30F3\u30C6\u30FC\u30B7\u30E7\u30F3\u3068\u6280\u8853\u8A18\u4E8B\u306B\u30A2\u30AF\u30BB\u30B9\u3057\u3066\u4E0B\u3055\u3044
+TalendForgeDialog.labelMessageThreeVer_1=\u8CEA\u554F\u3078\u306E\u56DE\u7B54\u3092\u898B\u3064\u3051\u3001community.talend.com\u306E\u30C7\u30A3\u30B9\u30AB\u30C3\u30B7\u30E7\u30F3\u63B2\u793A\u677F\u306B\u53C2\u52A0\u3057\u3066\u3044\u308B\u4ED6\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u652F\u63F4\u3057\u3066\u4E0B\u3055\u3044
+TalendForgeDialog.agreeButtonVer_1=\u540C\u610F\u3057\u307E\u3059:
+TalendForgeDialog.agreeButtonVer_2=\u30B3\u30DF\u30E5\u30CB\u30C6\u30A3\u306E\u5229\u7528\u898F\u7D04
