--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ja.properties
@@ -1230,3 +1230,4 @@ DatabaseForm.ZnodeParent.checkBtn=\u89AAZookeeper znode\u306E\u8A2D\u5B9A
 DatabaseForm.maprdb.tableInfo.tableNSMapping.label=\u30C6\u30FC\u30D6\u30EB\u30CD\u30FC\u30E0\u30B9\u30DA\u30FC\u30B9\u30DE\u30C3\u30D4\u30F3\u30B0
 DatabaseForm.set_table_ns_mapping.checkBtn=\u30C6\u30FC\u30D6\u30EB\u30CD\u30FC\u30E0\u30B9\u30DA\u30FC\u30B9\u30DE\u30C3\u30D4\u30F3\u30B0\u306E\u8A2D\u5B9A
 XmlFileStep1Form.limitToolTip=\u968E\u5C64\u306E\u6DF1\u5EA6\u3092{0}\u30EC\u30D9\u30EB\u306B\u5236\u9650\u3057\u307E\u3059\u3002
+DatabaseTableFilterForm.calculationView=\u8A08\u7B97\u30D3\u30E5\u30FC
