--- a/i18n/plugins/org.talend.rcp.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.rcp.nl/src/main/java/messages_ja.properties
@@ -111,3 +111,4 @@ ApplicationWorkbenchWindowAdvisor.jdkRequired=\u30B8\u30E7\u30D6\u306E\u751F\u62
 ExportLogsWizardPage.confirm=\u8B66\u544A
 ExportLogsWizardPage.confirmMsg=\u8B66\u544A\uFF1B\u3053\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u5B58\u5728\u3057\u307E\u3059\u3001\u4E0A\u66F8\u304D\u3057\u307E\u3059\u304B\uFF1F
 LinksToolbarItem_videos=Talend\u30C1\u30E5\u30FC\u30C8\u30EA\u30A2\u30EB\u3078\u306E\u30EA\u30F3\u30AF
+DynamicContentProvider.tryCloud=Talend Cloud\u309230\u65E5\u9593\u7121\u6599\u3067\u304A\u8A66\u3057\u4E0B\u3055\u3044
