--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
@@ -16,6 +16,7 @@ EMetadataEncoding.GB2312=\u4E2D\u56FD\u8A9E
 SelectRepositoryContextDialog.CollapseAll=\u5168\u3066\u6298\u308A\u7573\u3080
 ERepositoryObjectType.FolderNotFound={0}\u30BF\u30A4\u30D7\u7528\u30D5\u30A9\u30EB\u30C0\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002
 CorePreferencePage.componentDefaultFileDirectory=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8\u521D\u671F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
+SelectRepositoryContextDialog.ExistenceMessage=\u5909\u6570"{0}"\u306F\u30B8\u30E7\u30D6\u5185\u306B\u5B58\u5728\u3057\u307E\u3059(\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8:"{1}")\u3002
 CorePreferencePage.runInMultiThread=\u30DE\u30EB\u30C1\u30B9\u30EC\u30C3\u30C9\u5B9F\u884C\uFF08\u30B8\u30E7\u30D6\u751F\u6210\u306E\u305F\u3081\u306E\u30C7\u30D5\u30A9\u30EB\u30C8\u5024\uFF09
 MappingFileLoader.UndeclaredDbType="{0}" \u306F\u3001\u30CE\u30FC\u30C9\:{2} \u306EID "{1}" \u306EDBMS\u306EDB\u30BF\u30A4\u30D7\u3068\u3057\u3066\u5BA3\u8A00\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 EConnectionType.tableMenu=\u30C6\u30FC\u30D6\u30EB
@@ -50,6 +51,7 @@ EMetadataEncoding.UTF7=Unicode 2.0 UTF-7
 RepositoryUpdateManager.RenameContextMessages=\u5909\u66F4\u3092\u5168\u3066\u306E\u30B8\u30E7\u30D6\u306B\u53CD\u6620\u3057\u307E\u3059\u304B\uFF1F /n\u53CD\u6620\u3059\u308B\u5834\u5408\u3001\u66F4\u65B0\u51E6\u7406\u306B\u6642\u9593\u304C\u304B\u304B\u308B\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002/n\u53CD\u6620\u3057\u306A\u3044\u5834\u5408\u3001\u4EE5\u524D\u306E\u5909\u6570\u304C\u30B8\u30E7\u30D6\u306B\u30D3\u30EB\u30C9\u30A4\u30F3\u3055\u308C\u307E\u3059\u3002
 EUpdateItemType.Query=\u30AF\u30A8\u30EA
 ExtractMetaDataFromDataBase.SchemaNoPresent=\u30B9\u30AD\u30FC\u30DE\u304C\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u306B\u5B58\u5728\u3057\u307E\u305B\u3093
+SelectRepositoryContextDialog.DuplicationMessage=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8"{1}"\u3067\u5909\u6570"{0}"\u3092\u9078\u629E\u3057\u307E\u3057\u305F\u3002
 UpdatesConstants.Component=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8
 CorePreferencePage.perlInterpreter=Perl\u30A4\u30F3\u30BF\u30D7\u30EA\u30BF
 EMetadataEncoding.GB18030=\u4E2D\u56FD\u8A9E\u56FD\u5BB6\u57FA\u6E96
@@ -93,6 +95,7 @@ EUpdateItemType.Variable=\u5909\u6570
 ContextProcessSection.29=\u30A8\u30E9\u30FC
 CorePreferencePage.previewLimit=\u30D7\u30EC\u30D3\u30E5\u30FC\u5236\u9650
 ConextTemplateComposite.OrderMessages=\u3082\u3057\u3053\u308C\u3089\u306E\u5909\u6570\u3092\u4E26\u3079\u66FF\u3048\u308B\u5834\u5408\u306F\u3001\u305D\u308C\u3092\u9078\u629E\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+SelectRepositoryContextDialog.DuplicationTitle=\u91CD\u8907\u306E\u8B66\u544A!
 EUpdateItemType.Name=\u540D\u524D
 ContextProcessSection.13=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8{0}\u306B\u65B0\u898F\u540D\u79F0\u3092\u8A2D\u5B9A\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 ContextProcessSection.12=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u306E\u5909\u66F4
@@ -134,6 +137,7 @@ JavaTypesManager.string=STRING\u306F\u6570\u5024\u3067\u3059\:
 MetadataTalendType.dbIdNotFound=DBMS Id : {0} \u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093!
 PatternCalendar.dateFormat="yyyy-MM-dd HH\:mm\:ss"
 PatternCalendar.example=\u4F8B\:
+PerlDynamicProposalUtil.autoConvert=\ \u751F\u6210\u3055\u308C\u305F\u30B3\u30FC\u30C9\u306B\u304A\u3044\u3066{0}->[index]\u306B\u81EA\u52D5\u5909\u63DB\u3055\u308C\u307E\u3059
 ProcessorUtilities.finalizeBuild=\u30D3\u30EB\u30C9\u3092\u7D42\u4E86\u4E2D...
 ProcessorUtilities.generatingJob=\u30B8\u30E7\u30D6\u751F\u6210\u4E2D...
 ProcessorUtilities.loadingJob=\u30B8\u30E7\u30D6\u8AAD\u8FBC\u307F\u4E2D...
@@ -215,6 +219,8 @@ EComponentCategory.debugRun=\u30C7\u30D0\u30C3\u30B0\u5B9F\u884C
 EComponentCategory.targetExec=\u30EA\u30E2\u30FC\u30C8\u5B9F\u884C
 EUpdateItemType.SAPIDoc=SAP iDoc
 EUpdateItemType.JobVersion=\u30B8\u30E7\u30D6\u30D0\u30FC\u30B8\u30E7\u30F3
+ProposalUtils.CellProposal.Error=\u3053\u306E\u30BF\u30A4\u30D7\u306ECellEditor\u3092\u63D0\u6848\u3059\u308B\u3053\u3068\u306F\u30B5\u30DD\u30FC\u30C8\u3055\u308C\u3066\u3044\u307E\u305B\u3093:
+ProposalUtils.CtrlProposal.ErrorMsg=\u3053\u306E\u30BF\u30A4\u30D7\u306E\u5236\u5FA1\u3092\u63D0\u6848\u3059\u308B\u3053\u3068\u306F\u30B5\u30DD\u30FC\u30C8\u3055\u308C\u3066\u3044\u307E\u305B\u3093:
 HTMLDocGenerator_generate_document=\u751F\u6210\u30C9\u30AD\u30E5\u30E1\u30F3\u30C8
 HTMLDocGenerator.author=\u4F5C\u6210\u8005
 HTMLDocGenerator.author1=\u4F5C\u6210\u8005
@@ -293,8 +299,12 @@ ConnectionParameterName.UserLabel=\u30E6\u30FC\u30B6
 ConnectionParameterName.PasswordLabel=\u30D1\u30B9\u30EF\u30FC\u30C9
 ConnectionParameterName.DbPathLabel=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u30FB\u30EB\u30FC\u30C8\u30D1\u30B9
 HTMLDocGenerator.tmap.expressionfilter=\u8868\u73FE\u30D5\u30A3\u30EB\u30BF\u30FC
+ActionBarBuildHelper.CloseEditorAction_text=&\u30AF\u30ED\u30FC\u30BA
 ActionBarBuildHelper.CloseEditorAction_toolTip=\u30AF\u30ED\u30FC\u30BA
 ActionBarBuildHelper.CloseAllAction_text=\u5168\u3066\u7573\u3080
 ActionBarBuildHelper.CloseAllAction_toolTip=\u5168\u3066\u7573\u3080
+ActionBarBuildHelper.SaveAll_text=\u3059\u3079\u3066\u4FDD&\u5B58
 ActionBarBuildHelper.SaveAll_toolTip=\u5168\u3066\u4FDD\u5B58
+ContextOrderProperty.BuiltInComment=\u7D44\u307F\u8FBC\u307F\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u5909\u6570
+ContextOrderProperty.RepositoryComment=\u30EA\u30DD\u30B8\u30C8\u30EA\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u304B\u3089\u306E\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u5909\u6570:
 ProcessorUtilities.nullProcess=\u30C6\u30B9\u30C8\u30B1\u30FC\u30B9\u304Cnull\u3067\u3059
